src/test/deca/context/valid/not.deca
{
    boolean a;
    !(a);
    !true;
    !(5<=6);
    !(true && a || a);
}
