src/test/deca/context/invalid/if-int-cond.deca
{
    if(5) {
        print("OK");
    }
}

